--- a/.env
+++ b/.env
@@ -2,16 +2,16 @@ APP_NAME=""
 APP_ENV=production
 APP_KEY=base64:WrvqXJ+ilWOLItqI7C2N2R2dQkqFAHFYzTrQBBJqtso=
 APP_DEBUG=false
-APP_URL="http://localhost/shop"
+APP_URL="http://ecommerce.appiglesias.com"
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST="localhost"
 DB_PORT="3306"
-DB_DATABASE="shop_demo"
-DB_USERNAME="root"
-DB_PASSWORD=""
+DB_DATABASE="ecommerce_bbdd"
+DB_USERNAME="ecommerce_user"
+DB_PASSWORD="P@ssword0316"
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
